Update Inventory_03.java