@@ -7,8 +7,8 @@ public class Inventory_03 {
     public static void main(String[] args) {
         Scanner scanner = new Scanner(System.in);
 
-        List<String> itemsList = new java.util.ArrayList<>(Arrays.stream(scanner.nextLine().split(", "))
-                .toList());
+       List<String> itemsList = Arrays.stream(scanner.nextLine().split(", "))
+               .collect(Collectors.toList());
 
         String input = scanner.nextLine();
 
@@ -25,6 +25,7 @@ public class Inventory_03 {
             } else if (command.equals("Drop")) { //премахване
                 if (isExist(item, itemsList)) {
                     itemsList.remove(item);
+                    System.out.println();
                 }
             } else if (command.equals("Combine Items")) { //заместване
                 String oldElement = item.split(":")[0];
@@ -36,31 +37,21 @@ public class Inventory_03 {
 
             } else if (command.equals("Renew")) { //промяна
                 if (isExist(item, itemsList)) {
-                    String buffer = item;
                     itemsList.remove(item);
-                    itemsList.add(buffer);
+                    itemsList.add(item);
                 }
             }
 
             input = scanner.nextLine();
         }
 
-       /* System.out.println(itemsList.toString().replaceAll("[\\[\\],]", "")
+        System.out.println(itemsList.toString().replaceAll("[\\[\\],]", "")
                 .replaceAll(" ", ", "));
-              
-        */
-        for (int i = 0; i <= itemsList.size() - 1; i++) {
-            if (i == 0){
-                System.out.printf("%s ", itemsList.get(i));
-            }else {
-                System.out.printf("%s, ", itemsList.get(i));
-            }
-        }
+
     }
 
     //проверка дали артикула съществува
     public static boolean isExist(String item, List<String> currentList) {
-
         return currentList.contains(item);
     }
 }
